# clutter-gst

./: .gitignore  .vimrc  AUTHORS  ChangeLog  ChangeLog.pre-git-import  Makefile.am  NEWS  README  autogen.sh  clutter-gst.doap  clutter-gst.pc.in  configure.ac
clutter-gst/: .gitignore  Makefile.am  clutter-gst-audio.c  clutter-gst-audio.h  clutter-gst-debug.c  clutter-gst-debug.h  clutter-gst-enum-types.c.in  clutter-gst-enum-types.h.in  clutter-gst-media.c  clutter-gst-media.h  clutter-gst-player.c  clutter-gst-player.h  clutter-gst-private.h  clutter-gst-shaders.h  clutter-gst-util.c  clutter-gst-util.h  clutter-gst-version.h.in  clutter-gst-video-sink.c  clutter-gst-video-sink.h  clutter-gst-video-texture.c  clutter-gst-video-texture.h  clutter-gst.h
clutter-gst/shaders/: .gitignore  I420.cg  I420.h  I420.pso  Makefile.am  YV12.cg  YV12.h  YV12.pso
doc/reference/: .gitignore  Makefile.am  clutter-gst-docs.sgml  clutter-gst-sections.txt  version.xml.in
examples/: .gitignore  Makefile.am  README  audio-player.c  audio.c  test-colorspace.c  video-cube.c  video-player.c  video-player.py  video-sink-navigation.c  video-sink.c
scripts/: Makefile.am  pso2h.py
tests/: .gitignore  Makefile.am  test-alpha.c  test-rgb-upload.c  test-start-stop.c  test-video-texture-new-unref-loop.c  test-yuv-upload.c
